# COMID

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.ko.txt  README.md  README.txt  environment.yml  install.sh  pyproject.toml  run_tests.sh  setup.sh  start_all.sh  start_api.sh  start_beat.sh  start_frontend.sh  start_monitoring.sh  start_worker.sh
data/: interface_molecules.yaml
data/forcefields/: inorganic_profiles.yaml  ionic_profiles.yaml  mineral_charge_catalog.yaml  mineral_lj_catalog.yaml  registry.yaml
data/molecules/: additives.yaml  asphalt_binder.yaml  crystal_structures.yaml  ghg_inventory.yaml  single_moles.yaml
docs/: USER_MANUAL.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  main.jsx  queryClient.js
mocks/: __init__.py  builder_mock.py  calculator_mock.py  protocol_mock.py  repository_mock.py
monitoring/prometheus/: prometheus.yml
scripts/: activate_v7_champion.py  backfill_ced.py  backfill_failed_metrics.py  backfill_viscosity.py  batch_generate_gaff2_artifacts.py  build_exampleB_data.py  build_paper_data.py  cleanup_orphan_experiment_refs.py  eval_water_viscosity.py  export_e_intra_sidecars.py  export_result_sidecars.py  generate_gaff2_artifact.py  generate_organic_artifact.py  import_e_intra_sidecars.py  import_result_sidecars.py  ingest_mdml_pretrain.py  install_lammps.sh  install_xorg_display_pin.sh  make_exampleB_ced_figure.py  make_graphical_abstract.py  make_paper_figures.py  md_to_docx.py  migrate_bulk_ff_to_gaff2.py  packmol_aaa1_bench.py  packmol_inverse_batch_bench.py  packmol_realmol_bench.py  packmol_wallclock_bench.py  prepare_water_viscosity_validation.py  recreate_binder_cell_grid.py  run_inverse_pipeline_smoke.py  setup_mig.sh  teardown_mig.sh  train_structural_challenger.py
sql/: indexes.sql  schema.sql  views.sql
sql/migrations/: 2026-02-12_metrics_value_nullable.sql  2026-02-24_experiment_attempt_tracking.sql  2026-02-24_experiment_composite_indexes.sql  2026-04-09_e_intra_temperature_aware.sql  2026-04-09_experiment_study_type.sql  2026-04-12_experiment_contract_phase1.sql  2026-04-12_metric_array_artifacts_phase2.sql  2026-04-12_metric_provenance_phase2.sql  2026-04-12_model_registry_lineage_phase3.sql  2026-04-22_analysis_jobs_cpu_rerun.sql
src/api/: __init__.py  application.py  deps.py  main.py  runtime_state.py
src/builder/: __init__.py  binder_catalog.py  build_throttle.py  composition_calculator.py  crystal_builder.py  crystal_importer.py  layer_builder.py  layer_spec.py  mol_parser.py  mol_types.py  molecule_db.py  molecule_db_indexing.py  molecule_db_loader.py  packing_validator.py  packmol_wrapper.py  structure_builder.py  supercell_search.py  topology_assembly.py  topology_generator.py  topology_helpers.py
src/common/: __init__.py  additive_ids.py  artifacts.py  constants.py  hashing.py  library_config.py  logging.py  molecule_id.py  numpy_compat.py  pathing.py  seed.py  tooling.py  units.py
src/config/: __init__.py  dashboard_settings.py  llm_settings.py  seed.py  settings.py  tool_settings.py
src/contracts/: CHANGELOG.md  __init__.py  errors.py  execution_plan.py  interfaces.py  schema_enums.py  schemas.py
src/features/: __init__.py
src/forcefield/: __init__.py  eligibility.py  fragment_fallback.py  inorganic_executor.py  inorganic_parameter_service.py  inorganic_typing_cache.py  interface_ff.py  ionic_executor.py  mineral_charge_loader.py  mineral_lj_loader.py  organic_curated_artifact.py  organic_typing_executor.py  smiles_utils.py  topology.py  typing_router.py  uff_element_fallback.py  water_executor.py
src/llm/: __init__.py  client_factory.py  mock_client.py  provider_clients.py
src/metrics/: __init__.py  array_storage.py  bulk_modulus.py  calculator.py  ced.py  density.py  e_inter.py  e_intra_store.py  group_assignment.py  interface_replicate.py  layer_metrics.py  msd.py  rdf.py  rdf_pairtype.py  statistics.py  tensile_metrics.py  tg.py  trajectory_metrics.py  viscosity.py
src/ml/: __init__.py  additive_features.py  amorphous_features.py  crystal_features.py  data_loader.py  dataset_router.py  drift_detector.py  extrapolation.py  feature_builder.py  feature_registry.py  feature_selector.py  feature_store.py  ff_atom_type_features.py  layered_data_loader.py  model_registry.py  models.py  molecule_features.py  multi_target.py  ood_detector.py  predictor.py  recommendation_evaluator.py  retrainer.py  (+6 more)
tests/: __init__.py  conftest.py  test_contracts.py  test_pipeline_mock.py  test_policies.py
tools/: backfill_experiment_contracts.py  backfill_experiment_molecules.py  fix_experiment_state_integrity.py  quality_gate.sh  verify_db_ml_contracts.py
(+1052 files in other folders)
