[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comid"
version = "0.99.01"
description = "COMID - COmplex Multiphase Integrated Dynamics: automated molecular-dynamics simulation and bulk-property analysis"
readme = "README.txt"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Developer", email = "user@local.dev"}
]
keywords = ["molecular-dynamics", "lammps", "asphalt", "machine-learning", "materials-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "rdkit>=2024.3",
    "pyarrow>=14.0",
    "jinja2>=3.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]
db = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.28",
    "alembic>=1.12",
]
queue = [
    "celery>=5.3",
    "redis>=5.0",
    "kombu>=5.3",
]
api = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "psutil>=5.9",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "scipy>=1.12",
    "optuna>=3.6",
    "pandas>=2.2",
]
llm = [
    "anthropic>=0.25.0",
    "openai>=1.12.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.6.0",
]
all = [
    "comid[dev,db,queue,api,ml,llm]",
]

[project.urls]
Homepage = "https://github.com/sentirain7/COMID"
Documentation = "https://github.com/sentirain7/COMID#readme"
Repository = "https://github.com/sentirain7/COMID"

[tool.setuptools.packages.find]
where = ["src", "packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["yaml", "celery.*", "redis.*", "kombu.*", "dotenv", "scipy.*", "requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rdkit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pymatgen.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "database.repositories.model_version_repo",
    "database.repositories.crystal_repo",
    "database.repositories.amorphous_repo",
    "database.repositories.additive_repo",
    "database.repositories.molecule_repo",
    "database.repositories.job_dependency_repo",
    "database.repositories.experiment_repo",
    "database.repositories.design_session_repo",
    "protocols.stage_catalog",
]
disable_error_code = [
    "assignment",
    "arg-type",
    "return-value",
    "call-overload",
    "index",
    "unused-ignore",
    "no-any-return",
]

[[tool.mypy.overrides]]
module = ["road_advisor_contracts.*", "road_advisor_core.*", "road_advisor_integrations.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["contracts", "common", "builder", "protocols", "parsers", "metrics", "database", "orchestrator", "api", "monitoring", "config", "forcefield", "ml", "recommendation", "validation", "llm", "road_advisor_contracts", "road_advisor_core", "road_advisor_integrations"]
